@@ -1,3 +1,8 @@
+2004-02-02  Mike Kestner  <mkestner@ximian.com>
+
+	* generator/CustomMarshalerGen.cs : beginnings of a new generatable.
+	* generator/SymbolTable.cs : mangle interface keyword to iface.
+
 2004-02-02  Martin Willemoes Hansen  <mwh@sysrq.dk>
 
 	* generator/ClassBase.cs: Converted String uses to the string alias.
